GMP_LDFLAGS = [
    "-lgmpxx",
    "-lgmp",
]

cc_library(
    name = "gmp",
    hdrs = [
        "include/gmp.h",
        "include/gmpxx.h",
    ],
    includes = ["include"],
    linkopts = 
        select({
            "@dreal//tools:linux_x86_64": ["-L/usr/lib/x86_64-linux-gnu"] + GMP_LDFLAGS,
            "@dreal//tools:linux_aarch64": ["-L/usr/lib/aarch64-linux-gnu"] + GMP_LDFLAGS,
        }),
    visibility = ["//visibility:public"],
)
